[package]
name = "ggblas-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
ggblas = { path = "../ggblas", features=["f16"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.64", features = ["console"] }
gemm = "0.15.4"
half = { version = "2.3.1", features = ["use-intrinsics"] }

[profile.release]
debug = true

